Fix animation jumping

--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ a {
 }
 
 #content {
-    --angle: 45deg;
     /*margin-left: 15px;
     margin-top : 15px;*/
     text-align: left;
@@ -47,7 +46,7 @@ a {
 
 @property --angle {
   syntax: '<angle>';
-  initial-value: 45deg;
+  initial-value: 0deg;
   inherits: false;
 }
 
